Fixed newline hidden on mobile/media screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2704,9 +2704,10 @@ input, select, textarea {
 
 		/* Box */
 
-			.box br {
+			/*.box br {
 				display: none;
 			}
+			*/
 
 		/* Header */
 
